assets/stylesheet/multipleChoice.css
.nav-button {
    margin: 0 1rem 0.5rem 0;
}

select {
    padding: 0.25rem;
    margin: 0.4rem 0.1rem;
    font-size: 1rem;
}

span.notice {
    padding: 1rem 0.25rem;
}

#example {
    color: black;
    background-color: white;
    padding: 0.5rem;
    /*    font-size: small; */
    border-radius: 3px;
}

.two-col-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.background-blue {
    background-color: #00247d;
}

/*
.notice { 
    color: black;
}
*/
.font-size-small {
    font-size: small;
}

.font-size-medium {
    font-size: medium;
}

.thai-button {

    font-size: 1rem;
    line-height: 1.35rem;

    float: right;
}

#searchWords {
    background-color: lightgoldenrodyellow;
}

#searchWords span {
    padding: 0 0.25rem;
}

#currentWord {
    background-color: greenyellow;
    color: black;
    padding: 0.7rem 0.9rem;
    margin: 0.5rem 0;
    /*   font-size: 1rem; */
}

#choiceWords div span:lang(th),
#searchWords span:lang(th) {
    color: red;
    background-color: #f9f9f9;
    border-radius: 5px;
    padding: 0.2rem 0.35rem;
    /*    margin: 0 2vw; */
}

.correct {
    background-color: lightgreen !important;
    color: green !important;
}

.incorrect {
    background-color: lightpink;
    color: red;
}

.info {
    background: var(--marked);
    color: black;
}

.blue {
    color: blue;
    background-color: #f9f9f9;
    border-radius: 5px;
    padding: 0.1rem;
}

.green {
    color: green;
}

#feedback {
    padding: .25rem;
    margin: .25rem;
    font-size: small;
}

